--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <form action="">
             <ul>
                 <li>
-                    <label for="usuario">Usuário: </label><input type="text" id="usuario" name="usuario">
+                    <label for="nome">Nome: </label><input type="text" id="nome" name="nome">
                 </li>
                 <li>
                     <label for="email">E-mail: </label><input type="text" id="email" name="email">
